UpdateVendeurEnchere